name:               diskhash
version:            0.0.4.2
synopsis:           Disk-based hash table
description:        Disk-based hash table
category:           Data
author:             Luis Pedro Coelho
maintainer:         Luis Pedro Coelho
license:            MIT
license-file:       COPYING
cabal-version:      >= 1.10
build-type:         Simple
bug-reports:        https://github.com/luispedro/diskhash/issues
extra-source-files: README.md ChangeLog src/diskhash.h src/primes.h src/rtable.h

library
  default-language: Haskell2010
  exposed-modules: Data.DiskHash
  hs-source-dirs: haskell/
  C-sources: haskell/Data/diskhash2.c src/diskhash.c
  Include-dirs: src/
  ghc-options: -Wall
  build-depends:
    base > 4.8 && < 5,
    bytestring == 0.10.*

Test-Suite diskhashtest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Data/DiskHash/Tests.hs
  other-modules: Data.DiskHash
  ghc-options: -Wall
  hs-source-dirs: haskell/
  include-dirs: src/
  build-depends:
    base > 4.8 && < 5,
    bytestring == 0.10.*,
    directory,
    diskhash,
    HUnit,
    QuickCheck,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    test-framework-th

source-repository head
  type: git
  location: https://github.com/luispedro/diskhash
